namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memory-game
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
