deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: memory-game
  name: memory-game
spec:
  replicas: 3
  selector:
    matchLabels:
      app: memory-game
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: memory-game
    spec:
      containers:
        - image: iredkin/pro690image:72
          name: memory-game
          resources: {}
status: {}
